--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <receiver
-            android:name=".util.TimerExpiredReciever"
+            android:name=".util.TimerExpiredReceiver"
             android:enabled="true"
             android:exported="false"></receiver>
 
