--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
             android:enabled="true"
             android:exported="false"></receiver>
 
-        <activity android:name=".MySettings" />
+        <activity
+            android:name=".MySettings"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
